[package]
name = "rc-rand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "biased"
path = "src/biased.rs"

[[bin]]
name = "unbiased"
path = "src/unbiased.rs"

[[bin]]
name = "combined"
path = "src/combined.rs"

[dependencies]
plotters = { version = "0.3.0"}
ordered-map = "0.4.2"
rand_core = {version = "0.6.3", features = ["getrandom"]}
piston_window = "0.112.0"
systemstat = "0.1.11"
plotters-piston = "0.3.0"
plotters-backend = "0.3.0"
